updating for deploy on web

--- a/web-frontend/.env.example
+++ b/web-frontend/.env.example
@@ -1,1 +1,1 @@
-NEXT_PUBLIC_BACKEND_URL=https://your-backend-app.onrender.com
+NEXT_PUBLIC_BACKEND_URL=https://search-algorithms-applied-to-selfsolved.onrender.com
