--- a/render.yaml
+++ b/render.yaml
@@ -1,12 +1,15 @@
-version: 1
+version: "1"
 build:
   commands:
     - cd api-backend
+    - python -m pip install --upgrade pip
     - pip install -r requirements.txt
 start:
-  command: cd api-backend && python main.py
+  command: cd api-backend && python run.py
 healthCheck:
   path: /health
 env:
   - key: PYTHON_VERSION
-    value: 3.11.0
+    value: "3.11.0"
+  - key: PIP_DISABLE_PIP_VERSION_CHECK
+    value: "1"
